# radpro-link

./: .actrc  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  platformio.ini
.github/workflows/: ci.yml
docs/plans/: 2026-02-28-ci-unit-test-job.md  2026-02-28-cleanup-and-ota-design.md  2026-02-28-cleanup-and-ota-plan.md  2026-02-28-docker-build-command-design.md  2026-02-28-docker-build-command.md  2026-02-28-testing-design.md  2026-02-28-testing-plan.md
scripts/: ble_scan.py  radpro_test.py  rtt_capture.py
src/: main.c
src/ble/: ble_service.c  ble_service.h
src/board/: board_config.c  board_config.h
src/dfu/: dfu_service.c  dfu_service.h
src/led/: led_status.c  led_status.h
src/security/: security_manager.c  security_manager.h
src/uart/: uart_bridge.c  uart_bridge.h
tests/ble_service/: CMakeLists.txt  testcase.yaml
tests/ble_service/src/: main.c
tests/board_config/: CMakeLists.txt  testcase.yaml
tests/board_config/src/: main.c
tests/led_status/: CMakeLists.txt  testcase.yaml
tests/led_status/src/: main.c
tests/main_flow/: CMakeLists.txt  testcase.yaml
tests/main_flow/src/: test_main.c
tests/mocks/: bt_mocks.h  gpio_mocks.h  kernel_mocks.h  uart_mocks.h
tests/security_manager/: CMakeLists.txt  testcase.yaml
tests/security_manager/src/: main.c
tests/uart_bridge/: CMakeLists.txt  testcase.yaml
tests/uart_bridge/src/: main.c
zephyr/: CMakeLists.txt  prj.conf
zephyr/boards/: xiao_nrf54l15_nrf54l15_cpuapp.conf  xiao_nrf54l15_nrf54l15_cpuapp.overlay
